Add meta theme color tag

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000">
     <link href="/src/style.css" rel="stylesheet" />
-    <title>waterfall</title>
+    <title>Waterfall</title>
   </head>
   <body class="bg-black text-bland h-screen w-screen">
     <div id="app">
