Try to disable draggin on the card

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             src="/assets/cards/2-of-spades.png"
             alt="Current Card"
             class="card-face card-front w-full h-auto object-cover"
+            draggable="false"
           />
           <img
             src="/src/assets/deck-back.png"
             alt="Card Back"
             class="card-face card-back w-full h-auto object-cover"
+            draggable="false"
           />
         </div>
       </div>
