Switch to dvh full height

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/src/style.css" rel="stylesheet" />
     <title>Waterfall</title>
   </head>
-  <body class="bg-black text-bland h-screen w-screen">
+  <body class="bg-black text-bland h-dvh w-screen">
     <div id="app">
       <!-- Navigation Menu -->
       <nav class="p-3 flex justify-between items-center">
