Fix modal centering and width on larger screens

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         role="dialog"
         aria-modal="true"
         aria-labelledby="restart-title"
-        class="px-5 fixed w-full top-1/2 -translate-y-1/2 left-0 z-50"
+        class="px-5 fixed w-full top-1/2 -translate-y-1/2 -translate-x-1/2 left-1/2 z-50 max-w-96"
         style="opacity: 0; transform: translateY(-50%) scale(0.5)"
         hidden
       >
