Fix img initial src

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Card A (active initially) -->
         <div class="card card-a">
           <img
-            src="/assets/cards/2-of-spades.png"
+            src="/src/assets/deck-back.png"
             alt="Current Card"
             class="card-face card-front w-full h-auto object-cover"
             draggable="false"
@@ -76,7 +76,7 @@
         <!-- Card B (hidden initially, used for alternating flip) -->
         <div class="card card-b" style="visibility: hidden">
           <img
-            src="/assets/cards/2-of-spades.png"
+            src="/src/assets/deck-back.png"
             alt="Current Card"
             class="card-face card-front w-full h-auto object-cover"
             draggable="false"
