animate initial card reveal on page load

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         class="card-container aspect-96/149 w-48 fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 rotate-15"
       >
         <!-- Card A (active initially) -->
-        <div class="card card-a">
+        <div class="card card-a" style="transform: rotateY(180deg)">
           <img
             src="/src/assets/deck-back.png"
             alt="Current Card"
