--- a/index.html
+++ b/index.html
@@ -2,11 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <link href="/src/style.css" rel="stylesheet" />
     <title>Waterfall</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Waterfall" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- Meta -->
+    <meta name="description" content="A simpler card puller" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://waterfall.somelar.dev/" />
+    <meta property="og:title" content="Waterfall" />
+    <meta property="og:description" content="A simpler card puller" />
+    <meta
+      property="og:image"
+      content="https://waterfall.somelar.dev/og-image.webp"
+    />
+
+    <!-- Links -->
+    <link href="/src/style.css" rel="stylesheet" />
+
+    <!-- Preconnect to wsrv.nl for image optimization -->
+    <link rel="preconnect" href="https://wsrv.nl" crossorigin />
+
+    <!-- Preload critical fonts -->
+    <link
+      rel="preload"
+      href="/fonts/redaction-10-latin-400-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/ibm-plex-mono-latin-400-normal.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
   </head>
   <body class="bg-black text-bland h-dvh w-screen">
     <div id="app">
